--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Hosting</title>
 </head>
 <body>
-    <h1>Hi this is my first hosting site</h1>
+    <h1>Hi this is my first hosting website</h1>
 </body>
 </html>
